; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/src/extr_......srcssl.c_find_keyset.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/src/extr_......srcssl.c_find_keyset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64, %struct.st_quic_keyset_t* }
%struct.st_quic_keyset_t = type { i64 }

@quic_keys = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.st_quic_keyset_t* (i64)* @find_keyset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.st_quic_keyset_t* @find_keyset(i64 %0) #0 {
  %2 = alloca %struct.st_quic_keyset_t*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.st_quic_keyset_t*, align 8
  store i64 %0, i64* %3, align 8
  store i64 0, i64* %4, align 8
  br label %6

6:                                                ; preds = %22, %1
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @quic_keys, i32 0, i32 0, i32 0), align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %25

10:                                               ; preds = %6
  %11 = load %struct.st_quic_keyset_t*, %struct.st_quic_keyset_t** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @quic_keys, i32 0, i32 0, i32 1), align 8
  %12 = load i64, i64* %4, align 8
  %13 = getelementptr inbounds %struct.st_quic_keyset_t, %struct.st_quic_keyset_t* %11, i64 %12
  store %struct.st_quic_keyset_t* %13, %struct.st_quic_keyset_t** %5, align 8
  %14 = load %struct.st_quic_keyset_t*, %struct.st_quic_keyset_t** %5, align 8
  %15 = getelementptr inbounds %struct.st_quic_keyset_t, %struct.st_quic_keyset_t* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* %3, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %10
  %20 = load %struct.st_quic_keyset_t*, %struct.st_quic_keyset_t** %5, align 8
  store %struct.st_quic_keyset_t* %20, %struct.st_quic_keyset_t** %2, align 8
  br label %26

21:                                               ; preds = %10
  br label %22

22:                                               ; preds = %21
  %23 = load i64, i64* %4, align 8
  %24 = add i64 %23, 1
  store i64 %24, i64* %4, align 8
  br label %6

25:                                               ; preds = %6
  store %struct.st_quic_keyset_t* null, %struct.st_quic_keyset_t** %2, align 8
  br label %26

26:                                               ; preds = %25, %19
  %27 = load %struct.st_quic_keyset_t*, %struct.st_quic_keyset_t** %2, align 8
  ret %struct.st_quic_keyset_t* %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
